--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -13,25 +13,23 @@
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #ffff;
-    border-radius: 100px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888;
+    height: 6px; /* altura do scroll horizontal */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1); /* trilho */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.4); /* barrinha */
     border-radius: 4px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
+  }
+  
+  /* Para Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.4) rgba(0, 0, 0, 0.1);
+  }
 
 .progress {
     animation: slide 1.2s infinite;
